# kio.sh

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  kio-tui.cabal  logo.txt
.github/workflows/: build.yml  ci.yml  deploy.yml
app/: Content.hs  Core.hs  Draw.hs  Events.hs  Fx.hs  Main.hs  Markdown.hs  UI.hs
http/: index.html
sshd/: entrypoint.sh  nss_ato.c  sshd_config
